--- a/mds/book/2/1.md
+++ b/mds/book/2/1.md
@@ -1,6 +1,9 @@
 # 工厂模式
+
 ## 简单工厂模式
+
 先写一个简单的登陆提示
+
 ```javascript
 // 警告框
 var LoginAlert = function(text) {
@@ -24,9 +27,10 @@ passALert.show()
 
 var loginfailConfirm = new LoginConfirm('用户名不存在，请重新输入或注册')
 passALert.show()
-
 ```
+
 上面调用有些麻烦，每次都要new,，使用下面方法进行改造
+
 ```javascript
 var PopFactary = function(name, text) {
   switch (name) {
@@ -37,7 +41,9 @@ var PopFactary = function(name, text) {
   }
 }
 ```
+
 上面两个类有相同的地方，是可以抽象出来共用的
+
 ```javascript
 function createPop(type, text) {
   var o = new Object()
@@ -56,7 +62,9 @@ function createPop(type, text) {
 ```
 
 ## 工厂方法模式
+
 工厂方法的本意是将创建对象的工作推迟到子类当中
+
 ```javascript
 var Factory = function(type, content) {
   if (this instanceof Factory) {
@@ -98,4 +106,88 @@ var data = [{
 for (var i = 0; i < data.length; i++) {
   Factory(data[i].type, data[i].content)
 }
+```
+
+## 抽象工厂模式
+
+### 抽象类
+抽象类是一种声明但不能使用的类
+
+```javascript
+var Dog = function() {}
+Dog.prototype = {
+  getPrice: function() {
+    return new Error('抽象方法不能调用')
+  },
+  getName: function() {
+    return new Error('抽象方法不能调用')
+  }
+}
+```
+我们可以看到Dog类什么也不能做，创建时没有任何属性，原型上的方法也不能使用，否则调用时会报错。但是在继承中却很有用，如果子类中没有重写这些方法，那么当调用时找到这些方法便会报错。
+```javascript
+Dog.prototype = {
+  getPrice: function() {
+    return new Error('getPrice方法没有定义')
+  },
+  getName: function() {
+    return new Error('getName方法没有定义')
+  }
+}
+```
+在一些项目中，父类中经常定义一些必要的方法，却没有具体实现，一旦子类创建了一个对象，该对象总要具备一些必要的方法，如果子类没有重写，那么实例化便会调用父类中的方法，如果父类有个友好的体适能，对忘记重写子类的开发是很有帮助的
+### 抽象工厂模式
+由于抽象类中定义的方法只是你显性地定义了一些功能，但并没有具体实现，而一个对象是要具有一套完整功能的，一般不用抽象类来创建对象。一般用它作为父类来创建一些子类
+```javascript
+// 抽象工厂方法
+var VehicleFactory = function(subClass, superType) {
+  if (typeof VehicleFactory[superType] === 'function') {
+    // 缓存类
+    function F() {}
+    // 继承父类的属性和方法
+    F.prototype = new VehicleFactory[superType]()
+    // 将子类constructor指向子类
+    subClass.construtor = subClass
+    // 子类原型继承父类
+    subClass.prototype = new F()
+  } else {
+    return new Error('未创建' + superType + '抽象类')
+  }
+}
+// 小汽车抽象类
+VehicleFactory.Car = {
+  this.type = 'Car'
+}
+VehicleFactory.Car.prototype = {
+  getPrice: function() {
+    console.log('抽象方法不能调用')
+  },
+  getSpeed: function() {
+    console.log('抽象方法不能调用')
+  }
+}
+// 公交车抽象类
+VehicleFactory.Bus = {
+  this.type = 'Bus'
+}
+VehicleFactory.Bug.prototype = {
+  getPrice: function() {
+    console.log('抽象方法不能调用')
+  },
+  getSpeed: function() {
+    console.log('抽象方法不能调用')
+  }
+}
+
+function Bmw(price, speed) {
+  this.price = price
+  this.speed = speed
+}
+VehicleFactory(Bmw, 'Car')
+Bmw.prototype.getPrice = function() {
+  return this.price
+}
+var bmw = new Bmw(100, 90)
+console.log(bmw)
+console.log(bmw.getPrice())
 ```
